# flecsy

./: CONTRIBUTING.md  Cargo.toml  README.md  flecs.h
.github/workflows/: docs.yaml
crates/flecs_bindings_generator/: Cargo.toml  README.md
crates/flecs_bindings_generator/src/: lib.rs  main.rs
crates/flecs_bindings_generator/src/generator/: mod.rs
crates/flecsys/: Cargo.toml  README.md  build.rs  flecs.c  flecs.h
crates/flecsys/src/: lib.rs
examples/: ctx.rs  entity.rs
flecsy_book/: book.toml
src/: auto.rs  lib.rs  nullstr.rs  tests.rs  vec.rs  world.rs
